# panda-selected-normalizer

./: .gitignore  PACKAGING_CHECKLIST.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
docs/: icefall_k2_integration_note.md  limitations.md  method_boundary.md
examples/: minimal_selected_normalizer_smoke.py  multiselected_parity_smoke.py
figures/: panda_architecture.drawio  panda_architecture_standalone.tex  panda_architecture_tikz.tex
panda/: __init__.py  reference.py  selected_normalizer.py  triton_kernels.py
paper/: README.md
scripts/: run_smoke.sh
tests/: test_selected_normalizer_parity.py
