[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "panda-selected-normalizer"
version = "0.0.0"
description = "Research prototype for exact full-C selected normalization without persistent full logits."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["torch>=2.0", "numpy>=1.26"]
authors = [{ name = "PANDA research prototype authors" }]

[project.optional-dependencies]
test = ["pytest>=8.0"]
triton = ["triton>=3.0; platform_system == 'Linux'"]

[tool.setuptools.packages.find]
where = ["."]
include = ["panda*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
