[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "panda-selected-normalizer"
version = "0.0.0"
description = "Exact full-C selected normalization for transducer/RNN-T ASR training systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["torch>=2.0", "numpy>=1.26"]
authors = [{ name = "PANDA research prototype authors" }]
keywords = [
  "asr",
  "rnnt",
  "transducer",
  "speech-recognition",
  "pytorch",
  "memory-efficiency",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
triton = ["triton>=3.0; platform_system == 'Linux'"]

[tool.setuptools.packages.find]
where = ["."]
include = ["panda*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
